--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "vue-media-q",
-  "version": "0.0.1",
-  "description": "Minimalist vue media query helper",
-  "author": "Renato Cardoso <re2005@gmail.com>",
-  "main": "dist/vue-media-query.umd.min.js",
-  "dependencies": {
-    "vue": "^2.6.10"
-  },
-  "devDependencies": {},
-  "license": "GPL-3.0-or-later",
-  "typings": "types/main.d.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/re2005/vue-media-query.git"
-  },
-  "keywords": [
-    "vue",
-    "media-query",
-    "plugin"
-  ],
-  "bugs": {
-    "url": "https://github.com/re2005/vue-media-query/issues"
-  },
-  "homepage": "https://github.com/re2005/vue-media-query#readme"
+    "name": "vue-media-q",
+    "version": "0.0.1",
+    "description": "Minimalist vue media query helper",
+    "author": "Renato Cardoso <re2005@gmail.com>",
+    "main": "index.ts",
+    "types": "types/main.d.ts",
+    "dependencies": {
+        "vue": "^2.6.10"
+    },
+    "devDependencies": {
+        "typescript": "~3.5.3"
+    },
+    "license": "GPL-3.0-or-later",
+    "typings": "types/main.d.ts",
+    "scripts": {
+        "build": "tsc"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/re2005/vue-media-query.git"
+    },
+    "keywords": [
+        "vue",
+        "media-query",
+        "plugin"
+    ],
+    "bugs": {
+        "url": "https://github.com/re2005/vue-media-query/issues"
+    },
+    "homepage": "https://github.com/re2005/vue-media-query#readme"
 }
